--- a/_locales/ja/led-strings.json
+++ b/_locales/ja/led-strings.json
@@ -1,7 +1,7 @@
 {
-    "No": "点滅なし",
-    "Slow": "ゆっくり",
-    "Nomal": "普通",
-    "Fast": "速く",
-    "blue": "青"
+    "eureka_IO.No|block": "点滅なし",
+    "eureka_IO.Slow|block": "ゆっくり",
+    "eureka_IO.Nomal|block": "普通",
+    "eureka_IO.Fast|block": "速く",
+    "eureka_IO.blue|block": "青"
 }
